criada classe para preencher com 5 unidades percentuais de viewport  - finalidade de "distanciar da margem direita" - propiciando melhor legibilidade. Persiste pequeno bug ao cadastrar. Investigar Controller.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,13 +52,6 @@ header .menu-lista{
     Top: 134,01px;
 }*/
 
-/*.principal {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-}*/
-
 header #imagemFreelancerJa{
     width: 30%;
 }
@@ -423,4 +416,7 @@ label {
 } 
 .justificavertival {
     padding-bottom: 10vh;
+}
+.class-padding-right-5vw {
+    padding-right: 5vw;
 }
